cropper: fix padding value of the preview valeu to math the textfield

--- a/src/custom-cropper/_cropper.scss
+++ b/src/custom-cropper/_cropper.scss
@@ -16,7 +16,7 @@
 
 .custom-cropper{
   .custom-cropper-current-img {
-    padding: 9px 0;
+    padding: 11px 0;
     display: inline-block;
     vertical-align: text-bottom;
     img {
